# omr-bumper

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: publish_crate.yml  release.yml
src/: cargo.rs  lib.rs  main.rs  manifest.rs  release.rs  repository.rs  repository_cmdgit.rs
tests/: README.md  cleanup_test_repos.sh  run_all_tests.sh  setup_test_repos.sh
tests/0001-simple/: Cargo.toml  test_bumper.sh
tests/0001-simple/src/: main.rs
tests/0002-untracked-files/: Cargo.toml  test_bumper.sh
tests/0003-ignored-cargo-lock/: test_bumper.sh
