[package]
name = 	 	"omr-bumper"
version =	"0.1.3-alpha" # :TODO: bump once released
edition = 	"2021"

license = "MIT"
description = "An opiniated version bumper for releases. Works for us."
readme = "README.md"
homepage = "https://github.com/AndreasOM/omr-bumper"
repository = "https://github.com/AndreasOM/omr-bumper"
keywords = ["tools"]
categories = ["command-line-utilities","game-development"]

[[bin]]
name = "omr-bumper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
git2 = "0.13.18"
toml_edit = "0.9.1"
semver = "1.0"
regex = "1.5.3"
unescape = "0.1.0"
