[package]
name = 	 	"omr-bumper"
version =	"0.3.20-dev" # :TODO: bump once released
edition = 	"2021"

license = "MIT"
description = "An opiniated version bumper for releases. Works for us."
readme = "README.md"
homepage = "https://github.com/AndreasOM/omr-bumper"
repository = "https://github.com/AndreasOM/omr-bumper"
keywords = ["tools"]
categories = ["command-line-utilities","game-development"]

[[bin]]
name = "omr-bumper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.79"
toml_edit = "0.21.0"
semver = "1.0"
cargo = "0.86.0"
path-absolutize = "3.1.1"
clap = { version = "4.4.13", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
lto = "thin"
